Added basic stuff so it isn't empty

--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <html>
 <head>
+    <title>Thomas Huang</title>
 </head>
 <body>
-Hello World
+    <h2>Thomas Huang</h2>
+    <h3>Contact Info and Links</h3>
+    <div>
+        Email: thomaseh [at] umich [dot] edu <br>
+        LinkedIn: <a href="https://www.linkedin.com/in/thomaseh/">thomaseh</a> <br>
+        Github: <a href="https://github.com/thomasehuang">thomasehuang</a>
+    </div>
+    <h3>About Me</h3>
+    <div>
+        Hello. My name is Thomas Huang. I am currently a junior studying Computer Science and Data Science at the University of Michigan.
+    </div>
 </body>
 </html>
