Added README. Added font. Changed the look of links.

--- a/index.html
+++ b/index.html
@@ -32,18 +32,32 @@
     MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
     -->
 </head>
+<style type="text/css">
+    body {
+        font-family: Arial, Verdana, Helvetica;
+        padding: 20px;
+        font-size: 16px;
+    }
+    #footer {
+        margin-top: 50px;
+        font-size: 14px;
+    }
+</style>
 <body>
     <h2>Thomas Huang</h2>
     <h3>Contact Info and Links</h3>
     <div>
         Email: thomaseh [at] umich [dot] edu <br>
-        LinkedIn: <a href="https://www.linkedin.com/in/thomaseh/">thomaseh</a> <br>
-        Github: <a href="https://github.com/thomasehuang">thomasehuang</a> <br>
-        Resume: <a href="resume.pdf">asd</a>
+        [<a href="https://www.linkedin.com/in/thomaseh/" target="_blank">LinkedIn</a>]
+        [<a href="https://github.com/thomasehuang" target="_blank">GitHub</a>]
+        [<a href="resume.pdf" target="_blank">resume</a>]
     </div>
     <h3>About Me</h3>
     <div>
         Hello. My name is Thomas Huang. I am currently a junior studying Computer Science and Data Science at the University of Michigan.
+    </div>
+    <div id="footer">
+        <i>Website best viewed on a computer.</i>
     </div>
 </body>
 </html>
