Added link to umich

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <h3>About Me</h3>
     <div>
-        Hello. My name is Thomas Huang. I am currently a junior studying Computer Science and Data Science at the University of Michigan.
+        Hello. My name is Thomas Huang. I am currently a junior studying Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/">EECS department, University of Michigan</a>.
     </div>
     <div id="footer">
         <i>Website best viewed on a computer.</i>
