--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
     heading {
         font-weight: bold;
-        font-size: 17px;
+        font-size: 18px;
     }
     #footer {
         margin-top: 50px;
@@ -49,6 +49,7 @@
     .card {
         margin-left: 15px;
         margin-right: 15px;
+        margin-bottom: 15px;
     }
     .date {
         float: right;
@@ -68,8 +69,44 @@
     <hr>
 
     <h3>About Me</h3>
-    <div>
+    <div class="card">
         Hello. My name is Thomas Huang. I am currently a third-year undergraduate student studying Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/">EECS department @ University of Michigan</a>.
+    </div>
+    <hr>
+
+    <h3>Research Experience</h3>
+    <div class="card">
+        <heading>Professor Honglak Lee's Lab</heading> – University of Michigan
+        <div>
+            Research Assistant <span class="date">April, 2018 – current</span>
+        </div>
+        <br>
+        <div>
+            I am researching the use of deep learning for perception and reasoning. Work done under <a href="http://web.eecs.umich.edu/~honglak/">Professor Honglak Lee</a>.
+        </div>
+    </div>
+    <div class="card">
+        <heading>ARM Lab</heading> – University of Michigan
+        <div>
+            Research Assistant <span class="date">Jan – April, 2018</span>
+        </div>
+        <br>
+        <div>
+            I researched the use of deep learning models for 3D shape completion from a single depth view, which has important applications in robotics. Work done under <a href="http://web.eecs.umich.edu/~dmitryb/">Professor Dmitry Berenson</a>.
+        </div>
+    </div>
+    <hr>
+
+    <h3>Professional Experience</h3>
+    <div class="card">
+        <heading>Salesforce</heading> – San Francisco, California
+        <div>
+            Frontier Scale Software Engineering Intern <span class="date">May – August, 2017</span>
+        </div>
+        <br>
+        <div>
+            I worked with a team to pioneer the integration of a third-party software with Salesforce’s Platform using Python and Javascript. I presented the product to C-level executives of a corporate client.
+        </div>
     </div>
     <hr>
 
@@ -77,7 +114,7 @@
     <div class="card">
         <heading>ICLR 2018 Reproducibility Challenge</heading>
         <div>
-            Final Project for EECS 498: Reinforcement Learning <span class="date">Sep - Dec, 2018</span>
+            Final Project for EECS 498: Reinforcement Learning at the University of Michigan <span class="date">Sep – Dec, 2018</span>
         </div>
         <br>
         <div>
@@ -88,9 +125,9 @@
 
     <h3>Teaching</h3>
     <div class="card">
-        <heading>EECS 445: Introduction to Machine Learning</heading>
+        <heading>EECS 445: Introduction to Machine Learning</heading> – University of Michigan
         <div>
-            Instructional Aide for Winter 2018 <span class="date">Jan - Apr, 2018</span>
+            Instructional Aide for Winter 2018 <span class="date">Jan – Apr, 2018</span>
         </div>
         <br>
         <div>
@@ -99,8 +136,22 @@
     </div>
     <hr>
 
+    <h3>Education</h3>
+    <div class="card">
+        <heading>University of Michigan</heading> – Ann Arbor, Michigan
+        <div>
+            Computer Science, Bachelor of Engineering <span class="date">Sep, 2015 – Present</span>
+        </div>
+        <br>
+        <div>
+            Cumulative GPA: 3.98, Major GPA: 4.0 <br>
+            Relevant coursework: Machine Learning, Reinforcement Learning, Computer Vision, Artificial Intelligence, Web Systems, Operating Systems.
+        </div>
+    </div>
+    <hr>
+
     <h3>Readings</h3>
-    <div>
+    <div class="card">
         I am keeping a list of papers that I read for research/projects, which can be found <a href="https://github.com/thomasehuang/ML-Paper-Notes">here</a>.
     </div>
     <hr>
