--- a/index.html
+++ b/index.html
@@ -46,10 +46,17 @@
         margin-top: 50px;
         font-size: 14px;
     }
-    .card {
+    .norm {
         margin-left: 15px;
         margin-right: 15px;
         margin-bottom: 15px;
+    }
+    .card {
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        padding: 10px;
+        box-shadow: 0px 0px 5px #000;
     }
     .date {
         float: right;
@@ -64,12 +71,12 @@
         Email: thomaseh [at] umich [dot] edu <br>
         [<a href="https://www.linkedin.com/in/thomaseh/" target="_blank">LinkedIn</a>]
         [<a href="https://github.com/thomasehuang" target="_blank">GitHub</a>]
-        [<a href="resume.pdf" target="_blank">resume</a>]
+        [<a href="static/resume.pdf" target="_blank">resume</a>]
     </div>
     <hr>
 
     <h3>About Me</h3>
-    <div class="card">
+    <div class="norm">
         Hello. My name is Thomas Huang. I am currently a third-year undergraduate student studying Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/">EECS department @ University of Michigan</a>.
     </div>
     <hr>
@@ -82,7 +89,7 @@
         </div>
         <br>
         <div>
-            I am researching the use of deep learning for perception and reasoning. Work done under <a href="http://web.eecs.umich.edu/~honglak/">Professor Honglak Lee</a>.
+            I am researching the use of deep learning for perception and reasoning. Work done under <a href="http://web.eecs.umich.edu/~honglak/">Professor Honglak Lee</a>. Work partially done under the <a href="https://sure.engin.umich.edu/">SURE program</a>.
         </div>
     </div>
     <div class="card">
@@ -145,13 +152,14 @@
         <br>
         <div>
             Cumulative GPA: 3.98, Major GPA: 4.0 <br>
-            Relevant coursework: Machine Learning, Reinforcement Learning, Computer Vision, Artificial Intelligence, Web Systems, Operating Systems.
+            Relevant coursework: Machine Learning, Reinforcement Learning, Computer Vision, Artificial Intelligence, Web Systems, Operating Systems.<br><br>
+            Honors and Awards: <a href="https://studentawards.engin.umich.edu/deanslist/">Dean's Honor List</a> (Fall '15, Winter & Fall '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php">University Honors</a> (Winter '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php">James B. Angell Scholar</a> ('18)
         </div>
     </div>
     <hr>
 
     <h3>Readings</h3>
-    <div class="card">
+    <div class="norm">
         I am keeping a list of papers that I read for research/projects, which can be found <a href="https://github.com/thomasehuang/ML-Paper-Notes">here</a>.
     </div>
     <hr>
