--- a/index.html
+++ b/index.html
@@ -233,11 +233,21 @@
         <div class="card">
             <heading>ICLR 2018 Reproducibility Challenge</heading>
             <div>
-                Final Project for EECS 498: Reinforcement Learning at the University of Michigan <span class="date">Sep – Dec, 2018</span>
+                Final Project for EECS 498: Reinforcement Learning at the University of Michigan <span class="date">Sep – Dec, 2017</span>
             </div>
             <br>
             <div>
                 For <a href="https://www.cs.mcgill.ca/~jpineau/ICLR2018-ReproducibilityChallenge.html">this challenge</a>, we aimed to reproduce the results from the paper <i>Curiosity-driven Exploration by Bootstrapping Features</i>. Our implementation and report can be found <a href="https://github.com/thomasehuang/Reproducing-Curiosity-Driven-Exploration-By-Bootstrapping-Features">here</a>.
+            </div>
+        </div>
+        <div class="card">
+            <heading>Front-end Collision Prevention System</heading>
+            <div>
+                Final Project for EECS 442: Computer Vision at the University of Michigan <span class="date">Sep – Dec, 2017</span>
+            </div>
+            <br>
+            <div>
+                My team created a system to be incorporated into dash cameras to automatically detect cars suddenly breaking/slowing down in front. For the detection of cars, we used the <a href="https://arxiv.org/abs/1512.02325">Single Shot MultiBox Detector</a> (SSD) with pre-trained weights on the VOC2007 dataset. For detecting break lights, we used a sequence of HSL thresholding, morphological closure, and blob detection. A combination of both detections are used to determine whether the cars in front are suddenly breaking/slowing down. The results of our system can be found <a href="https://youtu.be/kxjSe9UHx4Q" target="_blank">here</a> and <a href="https://youtu.be/7a4Xlpptc1A" target="_blank">here</a>. The color of the bounding box indicate the detection result. The final report can be found <a href="static/442_report.pdf" target="_blank">here</a>.
             </div>
         </div>
         <hr>
