--- a/index.html
+++ b/index.html
@@ -35,18 +35,23 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <h2>Thomas Huang</h2>
-    <!-- <h3>Contact Info and Links</h3> -->
+    <!-- <h2>Contact Info and Links</h2> -->
     <div>
-        Email: thomaseh [at] umich [dot] edu <br>
-        [<a href="https://www.linkedin.com/in/thomaseh/" target="_blank">LinkedIn</a>]
-        [<a href="https://github.com/thomasehuang" target="_blank">GitHub</a>]
-        [<a href="static/resume.pdf" target="_blank">resume</a>]
+        <div id="pic_div">
+            <img src="static/me.png" alt="Me" id="pic">
+        </div>
+        <div id="info">
+            <h1>Thomas Huang</h1>
+            Email: thomaseh [at] umich [dot] edu <br>
+            [<a href="https://www.linkedin.com/in/thomaseh/" target="_blank">LinkedIn</a>]
+            [<a href="https://github.com/thomasehuang" target="_blank">GitHub</a>]
+            [<a href="static/resume.pdf" target="_blank">resume</a>]
+        </div>
     </div>
     <!-- <hr> -->
 
     <div id='about'>
-        <h3>About Me</h3>
+        <h2 id="title">About Me</h2>
         <div class="norm">
             Hello! My name is Thomas Huang. I am currently a third-year undergraduate student studying Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department @ University of Michigan</a>. 
             <br>
@@ -58,21 +63,22 @@
 
     <div>
         <button id="exp_but" onclick="dispButton('exp');">Experience</button>
+        <button id="pub_but" onclick="dispButton('pub');">Publications</button>
         <button id="tae_but" onclick="dispButton('tae');">Teaching & Education</button>
         <button id="proj_but" onclick="dispButton('proj');">Projects</button>
         <button id="misc_but" onclick="dispButton('misc');">Misc</button>
     </div>
 
     <div id='res_exp'>
-        <h3>Research Experience</h3>
+        <h2 id="title">Research Experience</h2>
         <div class="card">
-            <heading>Professor Honglak Lee's Lab</heading> – University of Michigan
+            <heading>AI Lab</heading> – University of Michigan
             <div>
                 Research Assistant <span class="date">April, 2018 – current</span>
             </div>
             <br>
             <div>
-                I am researching the use of deep learning for perception and reasoning. Work done under <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Professor Honglak Lee</a>. Work partially done under the <a href="https://sure.engin.umich.edu/" target="_blank">SURE program</a>.
+                I am researching the use of deep learning and its applications to other fields, such as computer vision. Work done under <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Professor Honglak Lee</a>. Work partially done under the <a href="https://sure.engin.umich.edu/" target="_blank">SURE program</a>.
             </div>
         </div>
         <div class="card">
@@ -82,14 +88,14 @@
             </div>
             <br>
             <div>
-                I researched the use of deep learning models for 3D shape completion from a single depth view, which has important applications in robotics. Work done under <a href="http://web.eecs.umich.edu/~dmitryb/" target="_blank">Professor Dmitry Berenson</a>.
+                I researched the use of deep learning models for 3D shape completion from a single depth view, which has important applications in robotics. Work done under <a href="http://web.eecs.umich.edu/~dmitryb/" target="_blank">Professor Dmitry Berenson</a> at the <a href="http://arm.eecs.umich.edu/" target="_blank">Autonomous Robotic Manipulation</a> (ARM) Lab.
             </div>
         </div>
         <!-- <hr> -->
     </div>
 
     <div id='prof_exp'>
-        <h3>Professional Experience</h3>
+        <h2 id="title">Professional Experience</h2>
         <div class="card">
             <heading>Salesforce</heading> – San Francisco, California
             <div>
@@ -103,8 +109,25 @@
         <!-- <hr> -->
     </div>
 
+    <div id='pub'>
+        <h2 id="title">Publications</h2>
+        <div class="card">
+            <heading>Learning Hierarchical Semantic Image Manipulation through Structured Representations</heading>
+            <div>
+                Seunghoon Hong, Xinchen Yan, <b>Thomas Huang</b>, Honglak Lee
+            </div>
+            <div>
+                To appear in <i>Advances in Neural Information Processing Systems (NIPS)</i>, Montreal, Canada, 2018
+            </div>
+            <div>
+                [<a href="https://arxiv.org/abs/1808.07535" target="_blank">arxiv</a>][code]
+            </div>
+        </div>
+        <!-- <hr> -->
+    </div>
+
     <div id='proj'>
-        <h3>Projects</h3>
+        <h2 id="title">Projects</h2>
         <div class="card">
             <heading>ICLR 2018 Reproducibility Challenge</heading>
             <div>
@@ -129,11 +152,11 @@
     </div>
 
     <div id='teach'>
-        <h3>Teaching</h3>
+        <h2 id="title">Teaching</h2>
         <div class="card">
             <heading>EECS 445: Introduction to Machine Learning</heading> – University of Michigan
             <div>
-                Instructional Aide for Winter 2018 <span class="date">Jan – Apr, 2018</span>
+                Instructional Aide for Winter and Fall 2018 (2 semesters) <span class="date">Jan – Apr, 2018; Sep – Present</span>
             </div>
             <br>
             <div>
@@ -144,7 +167,7 @@
     </div>
 
     <div id='ed'>
-        <h3>Education</h3>
+        <h2 id="title">Education</h2>
         <div class="card">
             <heading>University of Michigan</heading> – Ann Arbor, Michigan
             <div>
@@ -153,7 +176,7 @@
             <br>
             <div>
                 Cumulative GPA: 3.98, Major GPA: 4.0 <br>
-                Relevant coursework: Machine Learning, Reinforcement Learning, Computer Vision, Artificial Intelligence, Web Systems, Operating Systems.<br><br>
+                Relevant coursework: Machine Learning, Reinforcement Learning, Computer Vision, Artificial Intelligence, Natural Language Processing, Data Mining, Algorithmic Robotics, Web Systems, Operating Systems.<br><br>
                 Honors and Awards: <a href="https://studentawards.engin.umich.edu/deanslist/" target="_blank">Dean's Honor List</a> (Fall '15, Winter & Fall '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php" target="_blank">University Honors</a> (Winter '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php" target="_blank">James B. Angell Scholar</a> ('18)
             </div>
         </div>
@@ -161,7 +184,7 @@
     </div>
 
     <div id='xtra'>
-        <h3>Extracurriculars</h3>
+        <h2 id="title">Extracurriculars</h2>
         <div class="card">
             <heading>UM::Autonomy</heading> – University of Michigan
             <div>
@@ -176,7 +199,7 @@
     </div>
 
     <div id='read'>
-        <h3>Readings</h3>
+        <h2 id="title">Readings</h2>
         <div class="norm">
             I am keeping a list of papers that I read for research/projects, which can be found <a href="https://github.com/thomasehuang/ML-Paper-Notes">here</a>.
         </div>
