Set max-width. Changed some margins and stuff.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id='about'>
         <h2 id="title">About Me</h2>
         <div class="norm">
-            Hello! My name is Thomas Huang. I am currently a third-year undergraduate student studying Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department @ University of Michigan</a>. 
+            Hello! My name is Thomas Huang. I am currently a senior undergraduate student studying Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department @ University of Michigan</a>. 
             <br>
             <br>
             I am planning on pursuing a PhD degree in Machine Learning/Artificial Intelligence after obtaining my undergraduate degree. My research interests are deep learning and its applications to various fields.
