Updated CV and index

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             Hello! My name is Thomas Huang. I am currently a senior undergraduate student studying Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department @ University of Michigan</a>. 
             <br>
             <br>
-            I am planning on pursuing a PhD degree in Machine Learning/Artificial Intelligence after obtaining my undergraduate degree. My research interests are deep learning and its applications to various fields.
+            I am planning on pursuing a PhD degree in Machine Learning/Artificial Intelligence after obtaining my undergraduate degree. My research interests are deep learning and its applications to various fields, specifically computer vision, generative models, and reinforcement learning.
         </div>
        <hr>
     </div>
@@ -78,7 +78,7 @@
             </div>
             <br>
             <div>
-                I am researching the use of deep learning and its applications to other fields, such as computer vision. Work done under <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Professor Honglak Lee</a>. Work partially done under the <a href="https://sure.engin.umich.edu/" target="_blank">SURE program</a>.
+                I am researching the application of deep learning to generative tasks, including image and music generation. Work done under <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Professor Honglak Lee</a>. Work partially done under the <a href="https://sure.engin.umich.edu/" target="_blank">SURE program</a>.
             </div>
         </div>
         <div class="card">
